--- a/index.html
+++ b/index.html
@@ -649,8 +649,7 @@ imgFiles.push(img);
 if (baseName === 'room-image-1') {
 imgFiles.push('room-image-1a.jpg',
        'room-image-1b.jpg',
-       'room-image-1c.jpg',
-       'room-image-1d.jpg');
+       'room-image-1c.jpg');
 } else if (baseName === 'room-image-2') {
   // ẢNH PHỤ CHO PHÒNG 2 GIƯỜNG
   imgFiles.push('room-image-2a.jpg',
@@ -670,11 +669,11 @@ imgFiles.push('room-image-1a.jpg',
 } else if (baseName === 'room-image-apt') {
   // ẢNH PHỤ CHO CĂN HỘ MINI (Có nhiều bộ ảnh cho căn hộ mini)
   imgFiles.push('room-image-apt-1.jpg',       
-         'room-image-apt-1b.jpg',
+        
          'room-image-apt-1c.jpg',       
          'room-image-apt-2.jpg',
          'room-image-apt-2a.jpg',
-         'room-image-apt-2b.jpg',
+         
          'room-image-apt-2c.jpg',
          'room-image-apt-2d.jpg',
          'room-image-apt-3.jpg');
