--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div class="profile">
         <div style="position: relative; display: inline-block">
-          <img src="logo1.jpg" alt="Logo Sâm Nguyễn Hotel" class="logo" />
+          <img src="logo1.png" alt="Logo Sâm Nguyễn Hotel" class="logo" />
           <div class="qr-card" title="Quét mã để truy cập E-Card"></div>
         </div>
         <div class="hotel-name">SÂM NGUYỄN HOTEL</div>
@@ -842,3 +842,4 @@
     </div>
   </body>
 </html>
+
